# autogold

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.paperclip/skills/: gold-trading-context.md  memory-protocol.md  pine-script-v6.md
docs/: architecture.md  build-plan.md  research.md  review-report.md
scripts/: data_pipeline.py  economic_calendar.py  heartbeat_cron.sh  ingest_ohlcv.py  macro_analyst.py  quant_researcher.py  regime_analyst.py  risk_manager.py  run_data_pipeline.sh  run_economic_calendar.sh  run_macro_analyst.sh  run_quant_researcher.sh  run_regime_analyst.sh  run_risk_manager.sh  run_sentiment_analyst.sh  run_skill_optimizer.sh  run_strategy_analyst.sh  run_strategy_monitor.sh  run_walk_forward_validator.sh  sentiment_analyst.py  skill_optimizer.py  status.py  strategy_analyst.py  strategy_monitor.py  test_agent.py  train_hmm.py  walk_forward_validator.py
src/gold_trading/: main.py  paperclip.py
src/gold_trading/backtest/: dynamic_strategy.py  engine.py  montecarlo.py  tournament.py
src/gold_trading/db/: client.py
src/gold_trading/embeddings/: client.py  corpus.py
src/gold_trading/models/: lesson.py  macro.py  regime.py  sentiment.py  signal.py  strategy.py  trade.py
src/gold_trading/risk/: calculator.py  rules.py
src/gold_trading/webhook/: receiver.py  (+2 more)
tests/: conftest.py  test_backtest.py  test_corpus.py  test_db.py  test_integration.py  test_macro_analyst.py  test_regime_analyst.py  test_risk_calculator.py  test_sentiment_analyst.py  test_validator.py  test_webhook_receiver.py
(+12 files in other folders)
