[project]
name = "gold-trading"
version = "0.1.0"
description = "Autonomous gold futures trading system orchestrated by Paperclip"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "anthropic>=0.52.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "vectorbt>=0.26.0",
    "hmmlearn>=0.3.0",
    "quantstats>=0.0.64",
    "polygon-api-client>=1.14.0",
    "fedfred>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_trading"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
